# urban-retail-decision-intelligence

./: .gitignore  README.md  environment-lock.yml  pyproject.toml  requirements-lock.txt  requirements.txt
configs/: store_schema.toml
data/: README.md
data/metadata/: archive_inventory.csv  csv_profiles.csv  raw_checksums.csv  store_schema_report.csv
docs/: data_inventory.md  decision_log.md  experiment_log.md  problem_definition.md  theory_ledger.md
scripts/: inspect_raw_archives.py  inspect_raw_csvs.py  validate_store_schema.py  verify_environment.py
src/mosaic/: __init__.py
src/mosaic/ingestion/: archive_inventory.py  schema_contract.py  text_profile.py
tests/: test_environment.py
tests/ingestion/: test_archive_inventory.py  test_schema_contract.py  test_text_profile.py
